--- a/Grupo47/pom.xml
+++ b/Grupo47/pom.xml
@@ -15,8 +15,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.7</maven.compiler.source>
-    <maven.compiler.target>1.7</maven.compiler.target>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
 
   <dependencies>
@@ -25,6 +25,14 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+
+	<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
+	<dependency>
+		<groupId>com.github.javaparser</groupId>
+		<artifactId>javaparser-core</artifactId>
+		<version>3.20.2</version>
+	</dependency>
+    
   </dependencies>
 
   <build>
