--- a/Grupo47/pom.xml
+++ b/Grupo47/pom.xml
@@ -25,6 +25,13 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+   <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<dependency>
+    <groupId>org.apache.poi</groupId>
+    <artifactId>poi</artifactId>
+    <version>5.0.0</version>
+</dependency>
+   
 
 	<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
 	<dependency>
@@ -32,8 +39,8 @@
 		<artifactId>javaparser-core</artifactId>
 		<version>3.20.2</version>
 	</dependency>
-    
   </dependencies>
+  
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
