--- a/Grupo47/pom.xml
+++ b/Grupo47/pom.xml
@@ -21,9 +21,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+	<groupId>junit</groupId>
+	<artifactId>junit</artifactId>
+	<version>3.8.1</version>
     </dependency>
    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
@@ -45,7 +45,52 @@
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
-      <plugins>
+	<plugins>
+
+
+
+		<plugin>
+			<groupId>org.jacoco</groupId>
+			<artifactId>jacoco-maven-plugin</artifactId>
+			<version>0.8.7-SNAPSHOT</version>
+			<executions>
+				<execution>
+					<id>default-prepare-agent</id>
+					<goals>
+						<goal>prepare-agent</goal>
+					</goals>
+				</execution>
+				<execution>
+					<id>default-report</id>
+					<goals>
+						<goal>report</goal>
+					</goals>
+				</execution>
+				<execution>
+					<id>default-check</id>
+					<goals>
+						<goal>check</goal>
+					</goals>
+					<configuration>
+						<rules>
+							<rule>
+								<element>BUNDLE</element>
+								<limits>
+									<limit>
+										<counter>COMPLEXITY</counter>
+										<value>COVEREDRATIO</value>
+										<minimum>0.60</minimum>
+									</limit>
+								</limits>
+							</rule>
+						</rules>
+					</configuration>
+				</execution>
+			</executions>
+		</plugin>
+      
+      
+      
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.1.0</version>
