--- a/Grupo47/pom.xml
+++ b/Grupo47/pom.xml
@@ -25,6 +25,16 @@
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
     </dependency>
+    
+    <dependency>
+	  <groupId>org.jacoco</groupId>
+	  <artifactId>jacoco-maven-plugin</artifactId>
+	  <version>0.8.6</version>
+	  <type>maven-plugin</type>
+	</dependency>
+    
+    
+    
    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
 <dependency>
     <groupId>org.apache.poi</groupId>
