--- a/Grupo47/.classpath
+++ b/Grupo47/.classpath
@@ -24,8 +24,8 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/guytu/.m2/repository/org/apache/xmlgraphics/batik-all/1.13/batik-all-1.13.jar"/>
-	<classpathentry kind="lib" path="C:/Users/guytu/.m2/repository/org/apache/pdfbox/fontbox/2.0.22/fontbox-2.0.22.jar"/>
-	<classpathentry kind="lib" path="C:/Users/guytu/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar" sourcepath="C:/Users/guytu/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alinc/.m2/repository/org/apache/pdfbox/fontbox/2.0.22/fontbox-2.0.22.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alinc/.m2/repository/org/apache/xmlgraphics/batik-all/1.13/batik-all-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/alinc/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.115.100.v20201202-1103.jar" sourcepath="C:/Users/guytu/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.109.0.v20181204-1801.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
