--- a/Grupo47/pom.xml
+++ b/Grupo47/pom.xml
@@ -32,6 +32,26 @@
     <artifactId>poi-ooxml</artifactId>
     <version>5.0.0</version>
 </dependency>
+
+<!-- https://mvnrepository.com/artifact/org.openjfx/javafx -->
+<dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-swing</artifactId>
+        <version>11-ea+24</version>
+    </dependency>
+
+    <dependency>
+        <groupId>org.openjfx</groupId>
+        <artifactId>javafx-controls</artifactId>
+        <version>11</version>
+    </dependency>
+
+
+  <dependency>
+     <groupId>org.jfree</groupId>
+     <artifactId>jfreechart</artifactId>     
+     <version>1.0.19</version>
+  </dependency>
    
 
 	<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
@@ -88,6 +108,15 @@
 				</execution>
 			</executions>
 		</plugin>
+		
+		<plugin>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-maven-plugin</artifactId>
+            <version>0.0.4</version>
+            <configuration>
+                <mainClass>MyClass</mainClass>
+            </configuration>
+        </plugin>
       
       
       
