--- a/Grupo47/.settings/org.eclipse.core.resources.prefs
+++ b/Grupo47/.settings/org.eclipse.core.resources.prefs
@@ -2,5 +2,6 @@ eclipse.preferences.version=1
 encoding//src/main/java=UTF-8
 encoding//src/main/java/G47/Grupo47/DirExplorer.java=UTF-8
 encoding//src/main/java/G47/Grupo47/MetricParser.java=UTF-8
+encoding//src/main/java/G47/Grupo47/ShowExcelGUIElements.java=UTF-8
 encoding//src/test/java=UTF-8
 encoding/<project>=UTF-8
