--- a/Grupo47/.classpath
+++ b/Grupo47/.classpath
@@ -24,8 +24,9 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Tomás Mendes/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.111.0.v20190605-1801.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tomás Mendes/.m2/repository/org/apache/pdfbox/fontbox/2.0.22/fontbox-2.0.22.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Tomás Mendes/.m2/repository/org/apache/xmlgraphics/batik-all/1.13/batik-all-1.13.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
+	<classpathentry kind="lib" path="C:/Users/ferna/.m2/repository/org/apache/xmlgraphics/batik-all/1.13/batik-all-1.13.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ferna/.m2/repository/org/apache/pdfbox/fontbox/2.0.22/fontbox-2.0.22.jar"/>
+	<classpathentry kind="lib" path="C:/Users/ferna/.p2/pool/plugins/org.eclipse.swt.win32.win32.x86_64_3.115.100.v20201202-1103.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
