--- a/Grupo47/pom.xml
+++ b/Grupo47/pom.xml
@@ -18,8 +18,18 @@
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  
+
 
   <dependencies>
+  <!-- https://mvnrepository.com/artifact/org.eclipse.swt/org.eclipse.swt.win32.win32.x86 -->
+<dependency>
+    <groupId>org.eclipse.swt</groupId>
+    <artifactId>org.eclipse.swt.win32.win32.x86_64</artifactId>
+    <version>4.3</version>
+</dependency>
+  
+  
     <dependency>
 	<groupId>junit</groupId>
 	<artifactId>junit</artifactId>
@@ -52,6 +62,24 @@
      <artifactId>jfreechart</artifactId>     
      <version>1.0.19</version>
   </dependency>
+  
+  <!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/batik-all -->
+<dependency>
+    <groupId>org.apache.xmlgraphics</groupId>
+    <artifactId>batik-all</artifactId>
+	<version>1.14</version>
+	<type>pom</type>
+</dependency>
+
+	<!-- https://mvnrepository.com/artifact/org.eclipse.platform/org.eclipse.swt -->
+<dependency>
+    <groupId>org.eclipse.platform</groupId>
+    <artifactId>org.eclipse.swt</artifactId>
+    <version>3.116.0</version>
+</dependency>
+	
+
+  
    
 
 	<!-- https://mvnrepository.com/artifact/com.github.javaparser/javaparser-core -->
